# project-euphonia-app

./: .gitignore  README.md  pyproject.toml
api/: .env.oidc.example  Dockerfile  Readme.md  __init__.py  app_dia.py  auth_config.py  auth_jwt.py  auth_util.py  env.example  euphonia_server_cloudbuild.yaml  gcloud_adapter.py  model_local_file_request_helper.py  model_request_helpers.py  pyproject.toml  requirements.txt  start_server.py  stop_server.py  uvicorn_config.py
api/e2ecloudAdapter/: e2e_models.py  e2e_storage.py
api/gcloudAdapter/: gcp_models.py  gcp_sample_cli.py  gcp_storage.py
api/local_adapter/: __init__.py  dia_hf.py  local_model.py  local_model_dia.py  local_model_parakeet.py  local_sample_cli.py  local_storage.py  local_utils.py
api/oauth/: README.md  __init__.py  apple_stateless.py  auth_sample_cli.py  base_oauth.py  config.py  google_stateless.py  jwt_utils.py  routes.py  stateless.py
api/oauth/docs/: 01-server-side-design.md  02-client-side-design.md  03-integration-design.md
api/remote_adapter/: __init__.py  vibe_remote_model.py
api/tests/: test_gcloud_adapter.py
api/web/: audioConverter.js  auth.html  clone_util.js  ffmpeg_conversion_functions.js  login_auth.js  login_partial.html  login_styles.css  pkce_auth.js  train_util.js  utils.js  voice_assist.html  voice_assist_util.js
api/web/auth/: auth_result.html  index.js  manager.js
api/web/auth/providers/: apple.js  base.js  google.js  microsoft.js
assets/: suresh_initial_sample.txt
conf.d/: apple_web.env  general_web.env  google_web.env
infra/: ReadMe.md  devops_discussion_summary.md  euphonia_server_cloudbuild.yaml  euphonia_supervisor.conf  public-net-setup.mmd  s6-supervise-run-nginix  setup-nginx.sh  suvani.xyz.conf
infra/nginx-conf/: nginx.conf
infra/nginx-conf/sites-available/: default  suvani.xyz.conf
infra/nginx-conf/sites-availbale/: suvani.xyz.conf
infra/s6-nginx/: run
infra/s6-nginx/log/: run
tests/: conftest.py  test_auth_config.py  test_model_local_file_request_helper.py  test_model_local_file_request_helper_README.md
tests/oauth/: test_apple_stateless.py  test_auth_config.py  test_google_stateless.py
