[project]
name = "euphonia-voice-assist"
version = "0.1.0"
requires-python = ">=3.10"
dependencies = [
    "cuda-python>=13.0.3",
    "ffmpeg-python>=0.2.0",
   "fastapi>=0.111.1",
    "python-multipart>=0.0.9",
    "google-cloud-aiplatform>=1.60.0",
    "hydra-core>=1.3.2",
    "nari-tts",
    "nemo-toolkit[asr]>=2.5.1",
    "numpy>=2.2.4",
    "torch>=2.8.0",
    "torchaudio>=2.8.0",
]

[[tool.uv.index]]
name="pytorch"
url="https://download.pytorch.org/whl/cu124"
explicit=true

[[tool.uv.index]]
name = "pypi"
url = "https://pypi.org/simple"
default=true

[tool.uv.sources]
nari-tts = { git = "https://github.com/nari-labs/dia.git" }
torch = [{ index = "pytorch" }]
torchaudio = [{ index = "pytorch" }]
[tool.uv]
override-dependencies = [
    # This instructs uv to ignore the version requirement for the 'torch' package
    # when it comes up as a transitive dependency (i.e., from nari-tts).
    "torch", "protobuf", "torchaudio","numpy"
]
